--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
   "main": "index.jsx",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "connected-react-router": "^6.5.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "react-router-dom": "^4.3.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "css-loader": "^2.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5"
+    "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
     "build": "webpack -p",
